--- a/war/ConductorManagerUI.html
+++ b/war/ConductorManagerUI.html
@@ -44,18 +44,18 @@
     </div>
 </noscript>
 
-<h1>Device Conductor Manager</h1>
+<!--h1>Device Conductor Manager</h1-->
 
-<table align="center">
+<table align="center" style="height:100%;width:100%; position: absolute; top: 0; bottom: 0; left: 0; right: 0;border:1px solid">
     <tr>
-        <td colspan="2" style="font-weight:bold;">Status</td>
+        <td colspan="2" id="menu" ></td>
+    </tr>
+    <tr>
         <td colspan="2" id="status" ></td>
     </tr>
-    <tr>
-        <td colspan="2" style="font-weight:bold;">Devices</td>
-        <td colspan="2" id="devices"></td>
+    <tr style="height: 100%;">
+        <td valign="top" colspan="2" id="devices"></td>
     </tr>
-
     <tr>
         <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
     </tr>
